--- a/src/lib/template/01_base.tmpl
+++ b/src/lib/template/01_base.tmpl
@@ -377,6 +377,22 @@
                             <input type="checkbox" name="showAutoUpdateDesktopNotifications" />
                         </td>
                     </tr>
+                    <tr>
+                        <td>
+                            <%= signOpPostLinksLabelText %>
+                        </td>
+                        <td>
+                            <input type="checkbox" name="signOpPostLinks" />
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>
+                            <%= signOwnPostLinksLabelText %>
+                        </td>
+                        <td>
+                            <input type="checkbox" name="signOwnPostLinks" />
+                        </td>
+                    </tr>
                 </tbody>
             </table>
             <table name="2" style="display: none;">
