--- a/src/lib/template/frame_list.tmpl
+++ b/src/lib/template/frame_list.tmpl
@@ -8,47 +8,63 @@
     <head>
         <% include baseHead(1) %>
     </head>
-        <body class="<%= deviceType %>">
-            <% include baseTexts() %>
-            <div class="theTitle">
-                <img src="/<%= sitePathPrefix %>favicon.ico" title="<%= pageTitle %>">
-            </div>
-            <br />
-            <div>
-                <div class="navbar navbarFrame">
-                    <% foreach board in boards %>
-                        <% item %>
-                            <% if ( !content.hiddenBoards.count(board.name) ) %>
-                                <span class="navbarItem navbarItemBoard">
-                                    [<%= board.name %>]
-                                    <a href="/<%= sitePathPrefix %><%= board.name %>" target="page"><%= board.title %></a>
-                                </span>
-                                <br />
-                            <% end %>
+    <body class="<%= deviceType %>">
+        <% include baseTexts() %>
+        <div class="theTitle">
+            <img src="/<%= sitePathPrefix %>favicon.ico" title="<%= pageTitle %>">
+        </div>
+        <br />
+        <div>
+            <div class="navbar navbarFrame">
+                <% foreach board in boards %>
+                    <% item %>
+                        <% if ( !content.hiddenBoards.count(board.name) ) %>
+                            <span class="navbarItem navbarItemBoard">
+                                [<%= board.name %>]
+                                <a href="/<%= sitePathPrefix %><%= board.name %>" target="page"><%= board.title %></a>
+                            </span>
+                            <br />
                         <% end %>
                     <% end %>
-                    <% if ( content.mode.name != "ascetic" ) %>
-                        <span class="navbarItem">
-                            <img src="/<%= sitePathPrefix %>img/playlist.png">
-                            <a href="/<%= sitePathPrefix %>playlist" target="page"><%= toPlaylistPageText %></a>
-                        </span>
-                        <br />
-                    <% end %>
+                <% end %>
+                <% if ( content.mode.name != "ascetic" ) %>
                     <span class="navbarItem">
-                        <img src="/<%= sitePathPrefix %>img/markup.png">
-                        <a href="/<%= sitePathPrefix %>markup" target="page"><%= toMarkupPageText %></a>
+                        <img src="/<%= sitePathPrefix %>img/playlist.png">
+                        <a href="/<%= sitePathPrefix %>playlist" target="page"><%= toPlaylistPageText %></a>
                     </span>
                     <br />
-                    <span class="navbarItem">
-                        <img src="/<%= sitePathPrefix %>img/homepage.png">
-                        <a href="/<%= sitePathPrefix %>" target="page"><%= toHomePageText %></a>
-                    </span>
-                    <span class="navbarItem">
-                        <img src="/<%= sitePathPrefix %>img/noframe.png">
-                        <a href="/<%= sitePathPrefix %>" target="_top"><%= normalVersionText %></a></span>
-                </div>
+                <% end %>
+                <span class="navbarItem">
+                    <img src="/<%= sitePathPrefix %>img/markup.png">
+                    <a href="/<%= sitePathPrefix %>markup" target="page"><%= toMarkupPageText %></a>
+                </span>
+                <br />
+                <span class="navbarItem">
+                    <img src="/<%= sitePathPrefix %>img/homepage.png">
+                    <a href="/<%= sitePathPrefix %>" target="page"><%= toHomePageText %></a>
+                </span>
+                <span class="navbarItem">
+                    <img src="/<%= sitePathPrefix %>img/noframe.png">
+                    <a href="/<%= sitePathPrefix %>" target="_top"><%= normalVersionText %></a></span>
+                <span class="navbarItem">
+                    <img src="/<%= sitePathPrefix %>img/question.png">
+                    <a href="/<%= sitePathPrefix %>" target="page"><%= toFaqPageText %></a></span>
+                <% foreach link in customLinks %>
+                    <% item %>
+                        <span class="navbarItem">
+                            <% if ( !link.imgUrl.empty() ) %>
+                                <img src="<%= link.imgUrl %>">
+                            <% end %>
+                            <% if ( !link.target.empty() ) %>
+                                <a href="<%= link.url %>" target="<%= link.target %>"><%= link.text %></a></span>
+                            <% else %>
+                                <a href="<%= link.url %>" target="page"><%= link.text %></a></span>
+                            <% end %>
+                    <% end %>
+                <% end %>
             </div>
-            </body>
+        </div>
+    </body>
 </html>
 <% end template %>
 
