--- a/src/lib/template/frame_list.tmpl
+++ b/src/lib/template/frame_list.tmpl
@@ -48,7 +48,7 @@
                     <a href="/<%= sitePathPrefix %>" target="_top"><%= normalVersionText %></a></span>
                 <span class="navbarItem">
                     <img src="/<%= sitePathPrefix %>img/question.png">
-                    <a href="/<%= sitePathPrefix %>" target="page"><%= toFaqPageText %></a></span>
+                    <a href="/<%= sitePathPrefix %>faq" target="page"><%= toFaqPageText %></a></span>
                 <% foreach link in customLinks %>
                     <% item %>
                         <span class="navbarItem">
