--- a/src/lib/template/01_base.tmpl
+++ b/src/lib/template/01_base.tmpl
@@ -124,7 +124,7 @@
                                  title="<%= toHomePageText %>"><img src="/<%= sitePathPrefix %>img/homepage.png"></a>]</span>
     <span class="navbarItem">[<a href="/<%= sitePathPrefix %>frame?path=<%= path %>" target="_top"
                                  title="<%= framedVersionText %>"><img src="/<%= sitePathPrefix %>img/frame.png"></a>]</span>
-    <span class="navbarItem">[<a href="/<%= sitePathPrefix %>"
+    <span class="navbarItem">[<a href="/<%= sitePathPrefix %>faq"
                                  title="<%= toFaqPageText %>"><img src="/<%= sitePathPrefix %>img/question.png"></a>]</span>
     <% foreach link in customLinks %>
         <% item %>
