Add "Bump limit reached/post limit reached" marks dynamically

--- a/src/lib/template/02_base_board.tmpl
+++ b/src/lib/template/02_base_board.tmpl
@@ -1067,6 +1067,10 @@
 <input type="hidden" id="moveThreadText" value="<%= moveThreadText %>" />
 <input type="hidden" id="moveThreadWarningText" value="<%= moveThreadWarningText %>" />
 <input type="hidden" id="fileTooLargeWarningText" value="<%= fileTooLargeWarningText %>" />
+<input type="hidden" id="bumpLimit" value="<%= bumpLimit %>" />
+<input type="hidden" id="postLimit" value="<%= postLimit %>" />
+<input type="hidden" id="bumpLimitReachedText" value="<%= bumpLimitReachedText %>" />
+<input type="hidden" id="postLimitReachedText" value="<%= postLimitReachedText %>" />
 <select id="availableBoardsSelect" class="select" style="display: none;">
     <% foreach board in availableBoards %>
         <% item %>
