Add Neutron style; fix /rpg/ form

--- a/src/lib/ololord_static_css.qrc
+++ b/src/lib/ololord_static_css.qrc
@@ -2,5 +2,6 @@
     <qresource prefix="/">
         <file>static/css/photon.css</file>
         <file>static/css/futaba.css</file>
+        <file>static/css/neutron.css</file>
     </qresource>
 </RCC>
