--- a/src/lib/template/02_base_board.tmpl
+++ b/src/lib/template/02_base_board.tmpl
@@ -638,8 +638,8 @@
             <% include customPostFormField0() %>
             <tr>
                 <% if ( content.deviceType == "mobile" || content.minimalisticPostform ) %>
-                    <td class="postformField" colspan="2">
-                        <input type="text" maxlength="<%= maxEmailLength %>" name="email" size="30"
+                    <td class="postformField nowrap" colspan="2">
+                        <input type="text" maxlength="<%= maxEmailLength %>" name="email" size="27"
                                placeholder="<%= postFormPlaceholderEmail %>" />
                         <input type="submit" name="submit" value="<%= postFormButtonSubmit %>" />
                     </td>
