Add "Show user IP" button

--- a/src/lib/template/02_base_board.tmpl
+++ b/src/lib/template/02_base_board.tmpl
@@ -473,6 +473,9 @@
                 <% end %>
                 <% if ( content.moder ) %>
                     <% if ( content.mode.name != "ascetic" ) %>
+                        <a name="ipButton"
+                           href="javascript:prompt('IP:', '<%= post.ip %>');">
+                            <img src="/<%= sitePathPrefix %>img/ip.png" title="<%= showUserIpText %>" /></a>
                         <a name="banButton"
                            href="javascript:lord.banUser('<%= currentBoard.name %>', '<%= post.number %>');">
                             <img src="/<%= sitePathPrefix %>img/ban.png" title="<%= banUserText %>" /></a>
@@ -1144,6 +1147,8 @@
                     <img src="/<%= sitePathPrefix %>img/open.png" title="<%= openThreadText %>" /></a>
                 <a name="moveButton" href="javascript:lord.moveThread('<%= currentBoard.name %>', '%postNumber%');">
                     <img src="/<%= sitePathPrefix %>img/move.png" title="<%= moveThreadText %>" /></a>
+                <a name="ipButton" href="javascript:prompt('IP:', '%postIp%');">
+                    <img src="/<%= sitePathPrefix %>img/ip.png" title="<%= showUserIpText %>" /></a>
                 <a name="banButton" href="javascript:lord.banUser('<%= currentBoard.name %>', '%postNumber%');">
                     <img src="/<%= sitePathPrefix %>img/ban.png" title="<%= banUserText %>" /></a>
                 <a name="downloadButton" href="javascript:lord.downloadThread();">
