--- a/src/lib/ololord_static_img.qrc
+++ b/src/lib/ololord_static_img.qrc
@@ -303,5 +303,6 @@
         <file>static/img/rss.png</file>
         <file>static/img/move.png</file>
         <file>static/img/neutron_line.png</file>
+        <file>static/img/ip.png</file>
     </qresource>
 </RCC>
