Continue implement user management system

--- a/src/lib/template/01_base.tmpl
+++ b/src/lib/template/01_base.tmpl
@@ -175,6 +175,7 @@
 <input type="hidden" id="error413Text" value="<%= error413Text %>" />
 <input type="hidden" id="hiddenPostListText" value="<%= hiddenPostListText %>" />
 <input type="hidden" id="removeFromHiddenPostListText" value="<%= removeFromHiddenPostListText %>" />
+<input type="hidden" id="availableBoards" value="<%= availableBoardsString %>" />
 <div id="settingsDialogTemplate" class="settingsDialog" style="display: none;">
     <fieldset>
         <legend><%= generalSettingsLegendText %></legend>
