--- a/src/lib/template/ban_user.tmpl
+++ b/src/lib/template/ban_user.tmpl
@@ -20,7 +20,7 @@
             <h1><%= pageTitle %></h1>
         </div>
         <form id="settings" class="centerForm" method="post" accept-charset="utf-8" enctype="multipart/form-data"
-              action="/<%= sitePathPrefix %>action/ban_user">
+              action="/<%= sitePathPrefix %>action/ban_poster">
             <input type="hidden" name="boardName" value="<%= currentBoardName %>" />
             <input type="hidden" name="postNumber" value="<%= postNumber %>" />
             <table>
