--- a/src/lib/template/02_base_board.tmpl
+++ b/src/lib/template/02_base_board.tmpl
@@ -1078,6 +1078,7 @@
 <input type="hidden" id="postLimitReachedText" value="<%= postLimitReachedText %>" />
 <input type="hidden" id="selectAllText" value="<%= selectAllText %>" />
 <input type="hidden" id="unselectAllText" value="<%= unselectAllText %>" />
+<input type="hidden" id="delallButtonText" value="<%= delallButtonText %>" />
 <select id="availableBoardsSelect" class="select" style="display: none;">
     <% foreach board in availableBoards %>
         <% item %>
