--- a/src/lib/template/ban_user.tmpl
+++ b/src/lib/template/ban_user.tmpl
@@ -23,64 +23,47 @@
               action="/<%= sitePathPrefix %>action/ban_poster">
             <input type="hidden" name="boardName" value="<%= currentBoardName %>" />
             <input type="hidden" name="postNumber" value="<%= postNumber %>" />
-            <table>
-                <tbody>
-                    <tr>
-                        <td>
-                            <%= boardLabelText %>
-                        </td>
-                        <td>
-                            <select name="board" class="select">
-                                <%foreach board in availableBoards %>
-                                    <% item %>
-                                        <% if ( board.name == content.currentBoardName ) %>
-                                            <option value="<%= board.name %>"
-                                                    selected="true">[<%= board.name %>] <%= board.title %></option>
-                                        <% else %>
-                                            <option value="<%= board.name %>">[<%= board.name %>] <%= board.title %></option>
-                                        <% end %>
-                                    <% end %>
+            <% foreach ban in bans %>
+                <% item %>
+                    <input type="hidden" name="ban_board_<%= ban.boardName %>" value="<%= ban.boardName %>" />
+                    [<%= ban.boardName %>] <%= ban.boardTitle %>
+                    <select name="ban_level_<%= ban.boardName %>" class="select">
+                        <%foreach level in banLevels %>
+                            <% item %>
+                                <% if ( ban.level == level.level ) %>
+                                    <option value="<%= level.level %>" selected="true"><%= level.description %></option>
+                                <% else %>
+                                    <option value="<%= level.level %>"><%= level.description %></option>
                                 <% end %>
-                            </select>
-                        </td>
-                    </tr>
-                    <tr>
-                        <td>
-                            <%= banLevelLabelText %>
-                        </td>
-                        <td>
-                            <select name="level" class="select">
-                                <%foreach level in banLevels %>
-                                    <% item %>
-                                        <% if ( 1 == level.level ) %>
-                                            <option value="<%= level.level %>" selected="true"><%= level.description %></option>
-                                        <% else %>
-                                            <option value="<%= level.level %>"><%= level.description %></option>
-                                        <% end %>
-                                    <% end %>
-                                <% end %>
-                            </select>
-                        </td>
-                    </tr>
-                    <tr>
-                        <td>
-                            <%= banReasonLabelText %>
-                        </td>
-                        <td>
-                            <input type="text" name="reason" size="43" />
-                        </td>
-                    </tr>
-                    <tr>
-                        <td>
-                            <%= banExpiresLabelText %>
-                        </td>
-                        <td>
-                            <input type="text" name="expires" placeholder="dd.MM.yyyy:hh" />
-                        </td>
-                    </tr>
-                </tbody>
-            </table>
+                            <% end %>
+                        <% end %>
+                    </select>
+                    <input type="text" name="ban_reason_<%= ban.boardName %>" size="43"
+                           placeholder="<%= banReasonLabelText %> [...]" />
+                    <input type="text" name="ban_expires_<%= ban.boardName %>"
+                           placeholder="<%= banExpiresLabelText %> <dd.MM.yyyy:hh>" />
+                    <br />
+                <% end %>
+            <% end %>
             <input type="submit" name="submit" value="<%= confirmButtonText %>" />
+        </form>
+        <br />
+        <form id="settings" class="centerForm" method="post" accept-charset="utf-8" enctype="multipart/form-data"
+              action="/<%= sitePathPrefix %>action/delall">
+            <input type="hidden" name="userIp" value="<%= userIp %>" />
+            <select name="board" class="select">
+                <%foreach board in availableBoards %>
+                    <% item %>
+                        <% if ( board.name == content.currentBoardName ) %>
+                            <option value="<%= board.name %>"
+                                selected="true">[<%= board.name %>] <%= board.title %></option>
+                        <% else %>
+                            <option value="<%= board.name %>">[<%= board.name %>] <%= board.title %></option>
+                        <% end %>
+                    <% end %>
+                <% end %>
+            </select>
+            <input type="submit" name="submit" value="<%= delallButtonText %>" />
         </form>
         <% include customHeader() %>
     </body>
