--- a/src/lib/template/01_base.tmpl
+++ b/src/lib/template/01_base.tmpl
@@ -126,6 +126,10 @@
                                  title="<%= framedVersionText %>"><img src="/<%= sitePathPrefix %>img/frame.png"></a>]</span>
     <span class="navbarItem">[<a href="/<%= sitePathPrefix %>faq"
                                  title="<%= toFaqPageText %>"><img src="/<%= sitePathPrefix %>img/question.png"></a>]</span>
+    <% if ( content.moder >= 1 ) %>
+        <span class="navbarItem">[<a href="/<%= sitePathPrefix %>manage"
+                                     title="<%= toManagePageText %>"><img src="/<%= sitePathPrefix %>img/manage.png"></a>]</span>
+    <% end %>
     <% foreach link in customLinks %>
         <% item %>
             <% if ( !link.imgUrl.empty() ) %>
