Add ability to set maximum simultaneous AJAX requests

--- a/src/lib/template/01_base.tmpl
+++ b/src/lib/template/01_base.tmpl
@@ -568,6 +568,14 @@
                 <tbody>
                     <tr>
                         <td>
+                            <%= maxSimultaneousAjaxLabelText %>
+                        </td>
+                        <td>
+                            <input type="number" min="1" max="20" name="maxSimultaneousAjax" />
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>
                             <%= showNewPostsLabelText %>
                         </td>
                         <td>
