--- a/src/lib/static/css/futaba.css
+++ b/src/lib/static/css/futaba.css
@@ -11,7 +11,7 @@ body.mobile {
     -moz-text-size-adjust: 100%;
     -webkit-text-size-adjust: 100%;
     -ms-text-size-adjust: 100%;
-    text-size-adjust: 100%;
+    /*text-size-adjust: 100%;*/
     font-size: 14px;
 }
 
@@ -416,7 +416,7 @@ span.newPostCount {
     bottom: 7px;
     color: #333333;
     opacity: 0.6;
-    filter: alpha(opacity=60);
+    /*filter: alpha(opacity=60);*/
 }
 
 .symbolCounterContainer {
@@ -577,19 +577,19 @@ span.newPostCount {
 
 .postFileFile > a > img.mumWatching:not(:hover) {
     opacity: 0.05;
-    filter: alpha(opacity=5);
+    /*filter: alpha(opacity=5);*/
 }
 
 .postHeader > a > img, .postFileSearch > a > img, .postHeader > span > a > img, .postFileSearch > form,
 .postHeader > span > form {
     opacity: 0.65;
-    filter: alpha(opacity=65);
+    /*filter: alpha(opacity=65);*/
 }
 
 .postHeader > a:not(.disabled) > img:hover, .postFileSearch > a:not(.disabled) > img:hover,
 .postHeader > span > a:not(.disabled) > img:hover, .postFileSearch > form:hover, .postHeader > span > form:hover {
     opacity: 1;
-    filter: alpha(opacity=100);
+    /*filter: alpha(opacity=100);*/
 }
 
 .postToThread > a > button {
@@ -602,7 +602,7 @@ span.newPostCount {
 
 .postActions > img {
     opacity: 0.65;
-    filter: alpha(opacity=65);
+    /*filter: alpha(opacity=65);*/
 }
 
 .desktop.postActions:hover > a, .desktop.postActions:hover > form {
@@ -618,7 +618,7 @@ span.newPostCount {
 }
 
 .threadPost {
-    horizontal-align: left;
+    text-align: left; /*WAS: horizontal-align*/
 }
 
 .postFile {
@@ -687,12 +687,12 @@ span.newPostCount {
     right: 20px;
     z-index: 9910;
     opacity: 0.5;
-    filter: alpha(opacity=50);
+    /*filter: alpha(opacity=50);*/
 }
 
 .navigationButton:hover {
     opacity: 1;
-    filter: alpha(opacity=100);
+    /*filter: alpha(opacity=100);*/
 }
 
 .navigationButtonTop {
@@ -708,12 +708,12 @@ span.newPostCount {
     top: 50%;
     z-index: 9910;
     opacity: 0.5;
-    filter: alpha(opacity=50);
+    /*filter: alpha(opacity=50);*/
 }
 
 .leafButton:hover {
     opacity: 1;
-    filter: alpha(opacity=100);
+    /*filter: alpha(opacity=100);*/
 }
 
 .leafButtonPrevious {
@@ -761,7 +761,7 @@ span.newPostCount {
     width: 1px;
     height: 1px;
     opacity: 0;
-    filter: alpha(opacity=0);
+    /*filter: alpha(opacity=0);*/
 }
 
 .postformFileText {
@@ -828,7 +828,7 @@ ul.tabWidget > li.activated {
     font-size: 0.9em;
     padding-bottom: 5px;
     text-align: left;
-    white-spcace: nowrap;
+    white-space: nowrap;
     overflow-x: auto;
 }
 
