Improve popup displaying

--- a/src/lib/ololord_static_img.qrc
+++ b/src/lib/ololord_static_img.qrc
@@ -305,5 +305,6 @@
         <file>static/img/neutron_line.png</file>
         <file>static/img/ip.png</file>
         <file>static/img/manage.png</file>
+        <file>static/img/loading.gif</file>
     </qresource>
 </RCC>
