--- a/src/lib/template/02_base_board.tmpl
+++ b/src/lib/template/02_base_board.tmpl
@@ -1079,6 +1079,7 @@
 <input type="hidden" id="selectAllText" value="<%= selectAllText %>" />
 <input type="hidden" id="unselectAllText" value="<%= unselectAllText %>" />
 <input type="hidden" id="delallButtonText" value="<%= delallButtonText %>" />
+<input type="hidden" id="hideByImageText" value="<%= hideByImageText %>" />
 <select id="availableBoardsSelect" class="select" style="display: none;">
     <% foreach board in availableBoards %>
         <% item %>
